src/main.scss
$editorWidth: 420px;
$minMapWidth: 400px;
$statusbarHeight: 48px;
$frostedBlurRadius: 258px;

$compactBreakpoint: $editorWidth + $minMapWidth;

#root {
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;

    user-select: none;

    display: grid;
    grid-template-columns: [editor-start] $editorWidth [editor-end statusbar-start map-start] auto [statusbar-end map-end];
    grid-template-rows: [editor-start map-start] auto [statusbar-start] $statusbarHeight [editor-end statusbar-end map-end];

    @media (max-width: $compactBreakpoint) {
        grid-template-columns: [editor-start statusbar-start map-start] auto [editor-end statusbar-end map-end];
        grid-template-rows: [editor-start] fit-content(60%) [editor-end map-start] auto [statusbar-start] $statusbarHeight [map-end statusbar-end];
    }
}

*:focus {
    outline: none;
}

#waypoint-editor-wrapper {
    grid-area: editor;
}

#waypoint-editor {
    width: 100%;
    height: 100%;

    border-right: 1px solid rgba(0, 0, 0, 0.2);

    @media (max-width: $compactBreakpoint) {
        border-right: none;
        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    }

    overflow: auto;
    -webkit-overflow-scrolling: touch;
}

#waypoint-editor-header {
    position: sticky;
    top: 0;

    z-index: 1020;

    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 

    textarea {
        resize: none;
    }
}

#waypoint-editor-footer {
    width: 100%;
    position: sticky;
    bottom: 0;

    overflow: hidden;
    
    z-index: 1020;

    border-top: 1px solid rgba(0, 0, 0, 0.1); 
}

#mapview {
    grid-area: map;
    width: 100%;
    height: 100%;

    transition: filter 0.2s;
    &.updating {
        transition: filter 0.4s;
        filter: saturate(0) brightness(0.5);

        * {
            pointer-events: none;
        }
    }
}

#autofit-button {
    grid-area: map;

    z-index: 1;

    align-self: start;
    justify-self: end;
}

#mapview-statusbar {
    grid-area: statusbar;

    z-index: 1;

    display: flex;
    align-items: center;
    justify-content: space-evenly;

    border-top: 1px solid rgba(0, 0, 0, 0.1);
}

#progress-bar {
    grid-area: map;
    height: 4px;
    overflow: hidden;
    z-index: 1;
}

#loading-indicator {
    grid-area: map;
    align-self: center;
    justify-self: center;

    pointer-events: none;
    z-index: 1;
}

.frosted {
    background-color: rgba(255, 255, 255, 0.9);

    @supports (backdrop-filter: blur($frostedBlurRadius)) {
        backdrop-filter: blur($frostedBlurRadius);
        background-color: rgba(255, 255, 255, 0.5);
    }
}

